--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "routing"
   ],
   "dependencies": {
-    "matchit": "^1.0.0"
+    "regexparam": "^1.0.1"
   },
   "devDependencies": {
     "tap-spec": "^4.1.1",
