--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "3.0.1",
   "repository": "lukeed/trouter",
   "description": "🐟 A fast, small-but-mighty, familiar ~fish~ router",
+  "module": "index.mjs",
+  "main": "index.js",
   "license": "MIT",
   "files": [
-    "index.js"
+    "index.js",
+    "index.mjs"
   ],
   "author": {
     "name": "Luke Edwards",
@@ -17,6 +20,7 @@
   },
   "scripts": {
     "bench": "node bench",
+    "build": "bundt index.mjs",
     "test": "tape test/*.js | tap-spec"
   },
   "keywords": [
@@ -28,6 +32,7 @@
     "regexparam": "^1.2.0"
   },
   "devDependencies": {
+    "bundt": "0.4.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
   }
