chore: rename “build” to “prepack" for auto-build

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "bench": "node bench",
-    "build": "bundt index.mjs",
+    "prepack": "bundt index.mjs",
     "test": "tape -r esm test/*.js | tap-spec"
   },
   "keywords": [
