chore: update pkg meta

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": {
     "name": "Luke Edwards",
     "email": "luke.edwards05@gmail.com",
-    "url": "lukeed.com"
+    "url": "https://lukeed.com"
   },
   "engines": {
     "node": ">=6"
