--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm install -g nyc
 
     - name: Build
-      run: npm run build
+      run: npm run prepack
 
     - name: Test
       run: npm test
